--- a/_posts/2019-07-04-CPU v.s GPU.md
+++ b/_posts/2019-07-04-CPU v.s GPU.md
@@ -19,7 +19,7 @@ Let's first take a look at their location in a computer.
 
  <img src="assets/images/CPU-GPU/CG-1.jpg" alt="CG-1" style="width: 100%; align: right;"> 
  
-<span style="font-size:17px !important; float: right;">*Stanford CS231n, Justin Johnson*</span>
+<span style="font-size:17px !important; float: right;">*Stanford CS$$231$$n, Justin Johnson*</span>
 
 <br><br>
 **CPU** stands for Central Processing Unit, and physically it is a little chip. It is thought as the brain of a computer where most calculations take place.
@@ -34,7 +34,7 @@ Basically, a CPU has two main components:
 
 Here is a simple comparison between the most advanced CPU and GPU.
 <img src="assets/images/CPU-GPU/CG-2.jpg" alt="CG-2" style="width: 100%;">
-<span style="font-size:17px !important; float: right;">*Stanford CS231n, Justin Johnson*</span>
+<span style="font-size:17px !important; float: right;">*Stanford CS$$231$$n, Justin Johnson*</span>
 
 We will do many matrix multiplication in deep learning, and each entry operation(row dot with column) is considered as a seperate running in parallel. Imagine with a GPU, every entry of output matrix is computed in parallel(due to so many cores in GPU) and thus the whole computation is super fast.
 
