--- a/_posts/2019-07-04-CPU v.s GPU.md
+++ b/_posts/2019-07-04-CPU v.s GPU.md
@@ -9,7 +9,7 @@ comments: true
 ---
 
 
-**In this article, I will explain what CPU and GPU are and how do these two compare in mahine learning**
+**In this post, I will explain what CPU and GPU are and how do these two compare in mahine learning**
 
 ------------------
 
